# cs2inspect

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
cs2inspect/: __init__.py  _create.py  _creation.py  _gen_util.py  _hex.py  _link_util.py  _metadata.py  _parse.py  _proto.py  _schema.py  _util_base.py  _util_gen.py  _util_hex.py  _util_link.py  _util_parse.py  _util_schema.py  econ.proto  econ_pb2.py
docs/: example_usage.md  output_model.md
hooks/: update-date.py  update-version.py
tests/: __init__.py  test_cli_gen.py  test_cli_inspect.py  test_console_command.py  test_enriched_parsing.py  test_gen_command.py  test_gen_link.py  test_gen_proto.py  test_hex_roundtrip.py  test_link_creation.py  test_link_parsing.py  test_link_type.py  test_parse_charms.py  test_parse_enriched.py  test_parse_link.py  test_parse_special.py  test_proto_builder.py  test_schema_errors.py  test_util_hex.py  test_util_link.py  test_util_schema.py
