[tool.poetry]
name = "cs2inspect"
version = "0.4.0"
description = "CS2 inspect link utility"
authors = ["Lukas Mahler <m@hler.eu>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Helyux/cs2inspect"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^7.34.1"
platformdirs = "^4.2.0"

[tool.poetry.group.dev.dependencies]
vermin = "^1.6.0"
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
