[tool.poetry]
name = "cs2inspect"
version = "0.5.0"
description = "CS2 inspect link utility"
authors = ["Lukas Mahler <m@hler.eu>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Helyux/cs2inspect"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^7.34.1"
platformdirs = "^4.9.4"

[tool.poetry.group.dev.dependencies]
vermin = "^1.8.0"
pytest = "^9.0.3"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["econ_pb2.py"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
